<resources>
    <string name="app_name">Graduation Project</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">full name</string>
    <string name="confirm_password">confirm password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset_info">Enter your email address to send your reset password link</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="handmade">Handmade</string>
    <string name="kids">Kids</string>
    <string name="men">Men</string>
    <string name="sports_amp_outdoors"><![CDATA[Sports & Outdoors]]></string>
    <string name="women">Women</string>
    <string name="beauty">Beauty</string>
    <string name="electronics">Electronics</string>
    <string name="vintage_amp_collectibles"><![CDATA[Vintage & Collectibles]]></string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="tops_cat">Tops</string>
    <string name="sweaters_cat">Sweaters</string>
    <string name="jeans_cat">Jeans</string>
    <string name="sweats_amp_hoodies"><![CDATA[Sweats & Hoodies]]></string>
    <string name="categories">Categories</string>
</resources>