<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.ResetPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/signika_negative_bold"
        android:text="@string/reset_password"
        android:textColor="@color/primaryDarkColor"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_reset_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_reset_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/signika_negative"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/signika_negative"
        android:text="@string/reset_password_btn"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor"
        android:textSize="20sp" />


</LinearLayout>